--- a/4-portfolio.html
+++ b/4-portfolio.html
@@ -30,14 +30,14 @@
     function contact_me_nav() {
       document.getElementById("Main_Label").innerHTML = "Contact";
       document.getElementById("Main_Section").innerHTML = "<div id=\"contact_div\">";
-      document.getElementById("Main_Section").innerHTML += "<form id=\"main-form\" class=\"container-fluid\">";
+      document.getElementById("Main_Section").innerHTML += "<form id=\"main_form\" class=\"container-fluid\">";
       document.getElementById("Main_Section").innerHTML += "<h3 class=\"heading-label\">General Inquiries:</h3>";  
       document.getElementById("Main_Section").innerHTML += "<label id=\"name-label\">Name: </label>";
       document.getElementById("Main_Section").innerHTML += "<input alt=\"name input\" id=\"name-input\"><br>";
       document.getElementById("Main_Section").innerHTML += "<label id=\"email-label\">Email:</label>";      
       document.getElementById("Main_Section").innerHTML += "<input alt=\"email input\" id=\"email-input\"><br>";
       document.getElementById("Main_Section").innerHTML += "<label id=\"submit-label\">Text:</label><br>";          
-      document.getElementById("Main_Section").innerHTML += "<textarea alt=\"message text box\" type=\"text\" id=\"message-input\"></textarea><br>";        
+      document.getElementById("Main_Section").innerHTML += "<textarea cols=\"70\" rows=\"11\" alt=\"message text box\" id=\"message_input\"></textarea><br>";        
       document.getElementById("Main_Section").innerHTML += "<div class = \"row r1 no-gutters\">";
       document.getElementById("Main_Section").innerHTML += "<div class = \"col-lg-12\">";
       document.getElementById("Main_Section").innerHTML += "<button alt=\"submit button\" type=\"submit\" class=\"submit_button\">Submit</button>";     
