--- a/4-portfolio.html
+++ b/4-portfolio.html
@@ -24,14 +24,23 @@
                                                           as a research assistant on similar projects related to signaling networks in osteogenesis.";
     }
 
-    var portfolio_html = ["<div id=portfolio_div>", 
+    var portfolio_html = ["<div class=\"container\" id=portfolio_div>",
+                          "<div class=\"row\">",
+                          "<div class=\"column\">",
+                          "<ul id=\"portfolio_list\">",
                           "<label>Select Project:</label><br>",
-                          "<button id=\"portfolio_button_1\" alt=\"project 1 button\">Project 1</button><br>",
-                          "<button id=\"portfolio_button_1\" alt=\"project 2 button\">Project 2</button><br>",
-                          "<button id=\"portfolio_button_1\" alt=\"project 3 button\">Project 3</button><br>",
-                          "<button id=\"portfolio_button_1\" alt=\"project 4 button\">Project 4</button><br>",
-                          "<button id=\"portfolio_button_1\" alt=\"project 5 button\">Project 5</button><br>",
-                          "</div>"];
+                          "<button class=\"portfolio_button_1\" alt=\"project 1 button\">Project 1</button>",
+                          "<button class=\"portfolio_button_1\" alt=\"project 2 button\">Project 2</button>",
+                          "<button class=\"portfolio_button_1\" alt=\"project 3 button\">Project 3</button>",
+                          "<button class=\"portfolio_button_1\" alt=\"project 4 button\">Project 4</button>",
+                          "<button class=\"portfolio_button_1\" alt=\"project 5 button\">Project 5</button>",
+                          "</ul>",
+                          "</div>",
+                          "<div id=portfolio_display class=\"column\">",
+                          "<label id=\"test_label\" class=\"item\"> test3 </label>",
+                          "</div>",
+                          "</div>",
+                          ];
 
     function portfolio_nav() {
       document.getElementById("Main_Label").innerHTML = "Portfolio";
@@ -54,8 +63,8 @@
       document.getElementById("Main_Section").innerHTML += "<textarea cols=\"70\" rows=\"11\" alt=\"message text box\" id=\"message_input\"></textarea><br>";        
       document.getElementById("Main_Section").innerHTML += "<div class = \"row r1 no-gutters\">";
       document.getElementById("Main_Section").innerHTML += "<div class = \"col-lg-12\">";
-      document.getElementById("Main_Section").innerHTML += "<button alt=\"submit button\" type=\"submit\" class=\"submit_button\">Submit</button>";     
-      document.getElementById("Main_Section").innerHTML += "<button alt=\"reset button\" type=\"submit\" class=\"reset_button\">Reset</button>";        
+      document.getElementById("Main_Section").innerHTML += "<button id=\"submit_button\" alt=\"submit button\" type=\"submit\" class=\"submit_button\">Submit</button>";     
+      document.getElementById("Main_Section").innerHTML += "<button id=\"reset_button\"  alt=\"reset button\" type=\"submit\" class=\"reset_button\">Reset</button>";        
       document.getElementById("Main_Section").innerHTML += "</div>";  
       document.getElementById("Main_Section").innerHTML += "</div>";  
       document.getElementById("Main_Section").innerHTML += "</form>";  
