--- a/index.html
+++ b/index.html
@@ -42,19 +42,21 @@
                     "</div>",
                     ];
     function display_p_1() {
-      document.getElementById("portfolio_display").innerHTML = "<img src=\"img1.jpg\">";
+      document.getElementById("portfolio_display").innerHTML = "<img src=\"svm.JPG\"><br> Support Vector Machine (SVM) Decision Boundary Widget <br> \
+                                                                The SVM Decision Boundary Widet visualizes the decision boundary of a support vector machine with automatic gaussian color gradient relative to an idealized decision vector \
+                                                               .";
     }
     function display_p_2() {
-      document.getElementById("portfolio_display").innerHTML = "";
+      document.getElementById("portfolio_display").innerHTML = "Project 2 Placeholder";
     }
     function display_p_3() {
-      document.getElementById("portfolio_display").innerHTML = "<img src=\"img1.jpg\">";
+      document.getElementById("portfolio_display").innerHTML = "Project 3 Placeholder";
     }
     function display_p_4() {
-      document.getElementById("portfolio_display").innerHTML = "<img src=\"img1.jpg\">";
+      document.getElementById("portfolio_display").innerHTML = "Project 4 Placeholder";
     }
     function display_p_5() {
-      document.getElementById("portfolio_display").innerHTML = "<img src=\"img1.jpg\">";
+      document.getElementById("portfolio_display").innerHTML = "Project 5 Placeholder";
     }
     function portfolio_nav() {
       document.getElementById("Main_Label").innerHTML = "Portfolio";
